--- a/files/login.html
+++ b/files/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Us | My Advocacy</title>
+	<title>Forums Login | My Advocacy</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
